Bows & arrows (#644)
Co-authored-by: jorisdebeer <jorisvkeulen@gmail.com>
Co-authored-by: sigmundgranaas <sigmundsgranaas@gmail.com>