@@ -1,11 +1,16 @@
 package com.sigmundgranaas.forgero.core.state.composite;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 import com.google.common.collect.ImmutableList;
 import com.sigmundgranaas.forgero.core.Forgero;
-import com.sigmundgranaas.forgero.core.property.Attribute;
 import com.sigmundgranaas.forgero.core.property.Property;
 import com.sigmundgranaas.forgero.core.property.Target;
-import com.sigmundgranaas.forgero.core.property.attribute.Category;
 import com.sigmundgranaas.forgero.core.property.attribute.TypeTarget;
 import com.sigmundgranaas.forgero.core.state.Composite;
 import com.sigmundgranaas.forgero.core.state.IdentifiableContainer;
@@ -13,13 +18,11 @@ import com.sigmundgranaas.forgero.core.state.Slot;
 import com.sigmundgranaas.forgero.core.state.State;
 import com.sigmundgranaas.forgero.core.state.upgrade.slot.SlotContainer;
 import com.sigmundgranaas.forgero.core.type.Type;
-import com.sigmundgranaas.forgero.core.util.match.Context;
+import com.sigmundgranaas.forgero.core.util.match.MatchContext;
 import com.sigmundgranaas.forgero.core.util.match.Matchable;
 import com.sigmundgranaas.forgero.core.util.match.NameMatch;
 import lombok.Getter;
 import org.jetbrains.annotations.NotNull;
-
-import java.util.*;
 
 @SuppressWarnings("ALL")
 public abstract class BaseComposite implements Composite {
@@ -31,6 +34,7 @@ public abstract class BaseComposite implements Composite {
 		this.slotContainer = slotContainer;
 		this.id = id;
 	}
+
 
 	@Override
 	public @NotNull
@@ -47,21 +51,16 @@ public abstract class BaseComposite implements Composite {
 
 	@Override
 	public List<Property> compositeProperties(Target target) {
-		var upgradeProps = slots().stream()
+		List<Property> upgradeProps = slots().stream()
 				.map(state -> state.applyProperty(target))
 				.flatMap(List::stream)
-				.filter(this::filterAttribute)
-				.toList();
+				.collect(Collectors.toList());
+
+		upgradeProps.addAll(slots().stream().map(slot -> slot.stream().features().toList()).flatMap(List::stream).toList());
 
 		return upgradeProps;
 	}
 
-	protected boolean filterAttribute(Property property) {
-		if (property instanceof Attribute attribute) {
-			return Category.UPGRADE_CATEGORIES.contains(attribute.getCategory()) || attribute.getCategory() == Category.PASS;
-		}
-		return false;
-	}
 
 	@Override
 	public Optional<State> has(String id) {
@@ -100,7 +99,7 @@ public abstract class BaseComposite implements Composite {
 	}
 
 	@Override
-	public boolean test(Matchable match, Context context) {
+	public boolean test(Matchable match, MatchContext context) {
 		if (match instanceof Type typeMatch) {
 			if (this.type().test(typeMatch, context)) {
 				return true;
@@ -127,6 +126,11 @@ public abstract class BaseComposite implements Composite {
 	@Override
 	public List<Slot> slots() {
 		return slotContainer.slots();
+	}
+
+	@Override
+	public SlotContainer getSlotContainer() {
+		return this.slotContainer;
 	}
 
 	@Getter
